Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/fields/proctedFieldSelectionPoly.deca
// Description:
//   Test du poly sur les champs protégés
//
// Resultat:
//    ContextualError: Forbidden access to protected field
//
// Historique:
//    cree le 22/01/2018

class A {
      protected int x;
}

class B extends A {
      int getX(A a) {
      	  return a.x;
      }
}

class X {
      void m() {
      	   A a = new A();
	   B b = new B();
	   println(b.getX(a)); // Ok du point de vue de la condition (2)
      }
}